Fixed nav item spacing & app container padding

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -14,37 +14,18 @@ html {
 
 .App {
   text-align: center;
-}
-
-// Currently unused
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  padding: 40px;
 }
 
 .App-header {
+  width: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
   color: white;
-  padding: 40px;
 }
 
 // Currently unused
 .App-link {
   color: #61dafb;
-}
-
-// Currently unused
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 body {
@@ -65,6 +46,10 @@ code {
 }
 
 // ** Navigation ** //
+header {
+  width: 100%;
+}
+
 .page-nav {
   width: 100%;
   margin-bottom: 48px;
@@ -75,7 +60,6 @@ code {
   text-align: left;
   color: #545f75;
   display: inline;
-  float: left;
 }
 
 .parent-screen-link:hover {
@@ -86,6 +70,7 @@ code {
   font-size: 1.4rem;
   height: 14px;
   cursor: pointer;
+  margin-left: auto;
 }
 
 .menu-toggle:hover path {
@@ -408,6 +393,10 @@ button {
 
 .hidden {
   display: none;
+}
+
+.flex {
+  display: flex;
 }
 
 .right {
